tdf#159288: Assertion on insert trend line

5  0x00007fd6780533a2 in __assert_fail
   (assertion=0x7fd66de41177 "ImplGetSVData()->mpDefInst->GetYieldMutex()->IsCurrentThread() && \"SolarMutex not owned!\"", file=0x7fd66df2c58b "/home/julien/lo/libreoffice/vcl/source/app/dbggui.cxx", line=35, function=0x7fd66de5d0c6 "void ImplDbgTestSolarMutex()") at ./assert/assert.c:101
6  0x00007fd66f0dd6a2 in ImplDbgTestSolarMutex() () at /home/julien/lo/libreoffice/vcl/source/app/dbggui.cxx:35
7  0x00007fd677522f10 in DbgTestSolarMutex() () at /home/julien/lo/libreoffice/tools/source/debug/debug.cxx:54
8  0x00007fd66f3aea88 in ImplFontCache::GetFontInstance(vcl::font::PhysicalFontCollection const*, vcl::font::FontSelectPattern&) (this=0x564a8f77e0c0, pFontList=0x564a8f7783d0, aFontSelData=...)
   at /home/julien/lo/libreoffice/vcl/source/font/fontcache.cxx:117
9  0x00007fd66f3ae987 in ImplFontCache::GetFontInstance(vcl::font::PhysicalFontCollection const*, vcl::Font const&, Size const&, float, bool)
   (this=0x564a8f77e0c0, pFontList=0x564a8f7783d0, rFont=..., rSize=Size = {...}, fExactHeight=12, bNonAntialias=false) at /home/julien/lo/libreoffice/vcl/source/font/fontcache.cxx:111
10 0x00007fd66eb905f6 in OutputDevice::GetDefaultFont(DefaultFontType, o3tl::strong_int<unsigned short, LanguageTypeTag>, GetDefaultFontFlags, OutputDevice const*)
   (nType=DefaultFontType::CJK_SPREADSHEET, eLang=..., nFlags=GetDefaultFontFlags::OnlyOne, pOutDev=0x564a8f6bfca0) at /home/julien/lo/libreoffice/vcl/source/outdev/font.cxx:573
11 0x00007fd62e86669d in chart::CharacterProperties::AddDefaultsToMap(std::__debug::unordered_map<int, com::sun::star::uno::Any, std::hash<int>, std::equal_to<int>, std::allocator<std::pair<int const, com::sun::star::uno::Any> > >&) (rOutMap=std::__debug::unordered_map with 19 elements = {...}) at /home/julien/lo/libreoffice/chart2/source/tools/CharacterProperties.cxx:358
12 0x00007fd62e951686 in (anonymous namespace)::GetStaticRegressionEquationDefaults()::$_0::operator()() const (this=0x7ffe3f9b6b80)
   at /home/julien/lo/libreoffice/chart2/source/tools/RegressionEquation.cxx:121
13 0x00007fd62e9500e7 in (anonymous namespace)::GetStaticRegressionEquationDefaults() () at /home/julien/lo/libreoffice/chart2/source/tools/RegressionEquation.cxx:117
14 0x00007fd62e94ff98 in chart::RegressionEquation::GetDefaultValue(int, com::sun::star::uno::Any&) const (this=0x564a90aa2870, nHandle=4, rAny=uno::Any(void))
   at /home/julien/lo/libreoffice/chart2/source/tools/RegressionEquation.cxx:196

See full bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=192072

Change-Id: I8048b9a69761dba618ef556335c2cadab6647627
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162737
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>